--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -4,7 +4,7 @@
     padding: 1rem 0;
     text-align: center;
     background: transparent;
-    border-bottom: 1px solid var(--border);
+    border-bottom: none;
     margin-bottom: 2rem;
 }
 
